--- a/style/style.css
+++ b/style/style.css
@@ -25,11 +25,12 @@ body{
   /* height: 600px; */
   height: 37.5em;
   top: 0;
-  left: 17.5em;
+  left: 17.3em;
 }
 
 .contacts{
-  width: 280px !important;
+  /* width: 280px !important; */
+  width: 21% !important;
   /* border: 1px solid blue; */
 }
 
@@ -39,21 +40,41 @@ body{
   /* width: 1039px; */
   width: 65em;
   top: 7em;
-  left: 17.5em;
+  left: 17.3em;
 }
 
 /* MEDIA QUERIES */
 
 @media (max-width: 960px) {
 
+  .container{
+    max-width: 100%;
+  }
 }
 
 
 @media (max-width: 720px) {
-
+  .container{
+    max-width: 100%;
+  }
 }
 
 
 @media (max-width: 540px) {
+  .container{
+    max-width: 100%;
+  }
 
+  .contacts{
+    width: 50% !important;
+  }
+
+  .vl{
+    left: 7em;
+  }
+
+  .hz{
+    left: 7em;
+    width: 74%;
+  }
 }
